--- a/ilmupedia.html
+++ b/ilmupedia.html
@@ -26,7 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-    <link href="css1/style.css" rel="stylesheet">
   <!-- =======================================================
   * NIXY Project
   ======================================================== -->
@@ -155,18 +154,9 @@ Untuk mendapatkan bahan-bahan tersebut bisa gabung ke grup telegam atau chat ke 
                 <img src="hc/1.jpg" class="img-fluid" alt="">
                                 <img src="hc/2.jpg" class="img-fluid" alt="">
                 <img src="hc/4.jpg" class="img-fluid" alt="">
-Kalau udah mendapatkan payload sama proxy terus klik garis 3 di kanan atas, lalu pilih payload. Selanjutnya masukkan payload dan proxy.<div><br>
-<b>Payload : 
-<!-- The text field -->
-<input type="text" value="GET / HTTP/1.1[crlf]Host: [host_port][crlf]Upgrade: websocket[crlf][crlf]" id="myInput">
-
-<!-- The button used to copy the text -->
-<button onclick="myFunction()">Salin Payload</button><div><div>
-Proxy : <!-- The text field -->
-<input type="text" value="ilmupedia.nixystore.my.id:80" id="myInput">
-
-<!-- The button used to copy the text -->
-<button onclick="myFunction()">Salin Proxy</button><div><div></b><br>
+Kalau udah mendapatkan payload sama proxy terus klik garis 3 di kanan atas, lalu pilih payload. Selanjutnya masukkan payload dan proxy contoh :<div>
+<b>Payload : Chat admin<div>
+Proxy : 157.823.689:80<div></b>
 Di bagian proxy jangan lupa kasih port. Kalau udah di isi klik apply atau save.
 <br><div style="text-align: center;">_____________________________________<p><div style="text-align: left;">
 
@@ -216,10 +206,8 @@ Artinya udah konek.
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="js1/js.js"></script>
 
 </body>
 
 </html>
 
-	
