--- a/ilmupedia.html
+++ b/ilmupedia.html
@@ -174,8 +174,7 @@ nixystore.my.id:80@nixy:store<div>
 nixystore.my.id:443@nixy:store</b><div>
 <img src="hc/6.jpg" class="img-fluid" alt="">
 Kalau udah di isi selanjutnya tinggal klik connect. Terus liat di menu LOG apakah sudah konek. Kalau ada tulisan warna kuning :
-<b>HTTP Custom ready to use</b><div>
-Artinya udah konek.
+<b>HTTP Custom ready to use</b>Artinya udah konek.
 
 <!-- End blog entry -->
 <!-- End blog author bio -->
