--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>NIXY Project</title>
   <meta content="Website project dengan sedikit tampilan yang responsif dan simple." name="description">
-  <meta content="nixy, nixy project, website nixy, nixy website, nixy pro, siapa nixy, nixy siapa, sarip, sarip hidayatuloh, nixy ft dizzy, dizzy, alam waker, alok" name="keywords">
+  <meta content="nixy, nixy project, website nixy, nixy website, nixy pro, siapa nixy, nixy siapa, sarip, sarip hidayatuloh, nixy ft dizzy, dizzy, alam waker, alok, tutorial, cara, cara mengubah, ssh gratis, ssh premium, ssh indonesia, ssh singapore, vmess gratis, vmess premium, ssh trojan vmess shdwsk, vmess, vless" name="keywords">
 
   <!-- Favicons -->
   <link href="img/nixxx.png" rel="icon">
