--- a/ilmupediahttpcustom.html
+++ b/ilmupediahttpcustom.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9615914347960451"
+     crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>NIXY Project</title>
   <meta content="Website project dengan sedikit tampilan yang responsif dan simple." name="description">
-  <meta content="nixy, nixy project, website nixy, nixy website, nixy pro, siapa nixy, nixy siapa, sarip, sarip hidayatuloh, nixy ft dizzy, dizzy, alam waker, alok" name="keywords">
+  <meta content="nixy, nixy project, website nixy, nixy website, nixy pro, siapa nixy, nixy siapa, sarip, sarip hidayatuloh, nixy ft dizzy, dizzy, alam waker, alok, tutorial, cara, cara mengubah, ssh gratis, ssh premium, ssh indonesia, ssh singapore, vmess gratis, vmess premium, ssh trojan vmess shdwsk, vmess, vless" name="keywords">
 
   <!-- Favicons -->
   <link href="img/nixxx.png" rel="icon">
@@ -47,57 +49,16 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a class="nav-link scrollto" href="#about">Services</a></li>
-          <li class="dropdown"><a href="#"><span>Comming soon</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Comming soon 1</a></li>
-              <li class="dropdown"><a href="#"><span>Comming soon</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Comming soon 1</a></li>
-                  <li><a href="#">Comming soon 2</a></li>
-                  <li><a href="#">Comming soon 3</a></li>
-                  <li><a href="#">Comming soon 4</a></li>
-                  <li><a href="#">Comming soon 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Comming soon 2</a></li>
-              <li><a href="#">Comming soon 3</a></li>
-              <li><a href="#">Comming soon 4</a></li>
-            </ul>
-          </li>
-
-          <li class="dropdown megamenu"><a href="#"><span>Mega Menu</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li>
-                <a href="#">Column 1 link 1</a>
-                <a href="#">Column 1 link 2</a>
-                <a href="#">Column 1 link 3</a>
-              </li>
-              <li>
-                <a href="#">Column 2 link 1</a>
-                <a href="#">Column 2 link 2</a>
-                <a href="#">Column 3 link 3</a>
-              </li>
-              <li>
-                <a href="#">Column 3 link 1</a>
-                <a href="#">Column 3 link 2</a>
-                <a href="#">Column 3 link 3</a>
-              </li>
-              <li>
-                <a href="#">Column 4 link 1</a>
-                <a href="#">Column 4 link 2</a>
-                <a href="#">Column 4 link 3</a>
-              </li>
-            </ul>
-          </li>
-
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#hero">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="#footer">Selengkapnya</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
+<!-- .navbar -->
 
     </div>
-  </header><!-- End Header -->
+  </header>
+<!-- End Header -->
 
   <main id="main">
 
