--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
 </head>
 
 <body>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9615914347960451"
+     crossorigin="anonymous"></script>
+<!-- DISPLAY -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9615914347960451"
+     data-ad-slot="4064844184"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+  
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
