--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
                 <div class="info-box">
                   <i class="bi bi-telephone"></i>
                   <h3>Telpon</h3>
-                  0813 2448 1206<br>0821 1969 0766</p>
+                  0821 1969 0766</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-envelope"></i>
                   <h3>Email</h3>
-                  info@nixyproject.biz.id<br>bussines@nixyproject.biz.id</p>
+                  nixyproject@gmail.com<br>bussines@nixyproject.biz.id</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -333,7 +333,7 @@
               <strong>Province :</strong> Jawa Barat<br>
               <strong>Country :</strong> Indonesia <br>
               <strong>Phone :</strong> 0821 1969 0755<br>
-              <strong>Email :</strong> info@nixyproject.biz.id<br>
+              <strong>Email :</strong> nixyproject@gmail.com<br>
             </p>
 
           </div>
