--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
-<p align="center"><img src="https://raw.githubusercontent.com/khoa083/khoa/main/Khoa_ne/img/Rainbow.gif" width="100%"></p>
-
-
 <p align="center">
-<a href="https://github.com/NIXY-PRO"> <img width="auto" src="https://github-readme-stats.vercel.app/api/top-langs/?username=NIXY-PRO&theme=dark&border_radius=10&hide_title=true&layout=compact&langs_count=20" alt="GitHub language stats" /><img width="auto" src="https://github-readme-stats.vercel.app/api?username=NIXY-PRO&theme=dark&hide_border=false&include_all_commits=false&count_private=false" />
-  </a>
+  <img width="auto" height="auto" src="https://telegra.ph/file/82537b3a407f57664a078.jpg">
 </p>
 
-
-
-
-
-
-
 <p align="center">
-<a href="https://github.com/NIXY-PRO"><img width="auto" src="https://github-contributor-stats.vercel.app/api?username=NIXY-PRO&limit=5&theme=dark&combine_all_yearly_contributions=true" /><img width="auto" src="https://github-readme-streak-stats.herokuapp.com/?user=NIXY-PRO&theme=dark&hide_border=false" />
- </a></p>
-<p align="center">
-<a href="https://github.com/NIXY-PRO">
-<img width="auto" src="http://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=NIXY-PRO&theme=dark" /><img width="auto" src="https://github-readme-activity-graph.vercel.app/graph?username=NIXY-PRO&bg_color=1a1b27&color=aa82d9&line=628edb&point=64bfaf&area=true&hide_border=true)(https://github.com/ashutosh00710/github-readme-activity-graph)" />
-  </a>
+  <img width="auto" height="auto" src="https://github-readme-stats.vercel.app/api?username=nixy-pro&show_icons=true&theme=chartreuse-dark&locale=id">
 </p>
 
+<div align="center">
+  <img width="auto" height="auto" src="https://github-readme-stats.vercel.app/api/top-langs/?username=nixy-pro&layout=compact&theme=chartreuse-dark">
+</div>
+</p>
 
-
+<div align="center" style="margin-top: 3%;">
+  <img width="auto" height="auto" src='https://github-profile-trophy.vercel.app/?username=nixy-pro&theme=monokai&row=1&column=5&no-frame=true'>
+</div>
