--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
-<p align="center">
-  <img width="auto" height="auto" src="https://telegra.ph/file/82537b3a407f57664a078.jpg">
-</p>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>NIXY Project</title>
+  <link rel="stylesheet" href="nixcss/style.css">
 
-<p align="center">
-  <img width="auto" height="auto" src="https://github-readme-stats.vercel.app/api?username=nixy-pro&show_icons=true&theme=chartreuse-dark&locale=id">
-</p>
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>404</h1>
+			</div>
+			<a href="https://www.nixyproject.biz.id">Lapor</a>
+					<a href="https://www.nixyproject.biz.id" target="_blank">Kembali</a>
+     
+		</div>
+	</div>
+<!-- partial -->
+  <script  src="nixjs/script.js"></script>
 
-<div align="center">
-  <img width="auto" height="auto" src="https://github-readme-stats.vercel.app/api/top-langs/?username=nixy-pro&layout=compact&theme=chartreuse-dark">
-</div>
-</p>
-
-<div align="center" style="margin-top: 3%;">
-  <img width="auto" height="auto" src='https://github-profile-trophy.vercel.app/?username=nixy-pro&theme=monokai&row=1&column=5&no-frame=true'>
-</div>
+</body>
+</html>
